--- a/CSS/_base.scss
+++ b/CSS/_base.scss
@@ -113,7 +113,7 @@
             width: 100%;
             height: 110%;
             align-self: start;
-            background-image: url(../img/project4.PNG);
+            background-image: url(project4.PNG);
             animation: walk 20s infinite;
             box-shadow:5px 5px 10px 1px rgba(0,0,0,0.5);
     }
@@ -128,7 +128,7 @@
 
 #content{
     .header{
-        background-image: url("../img/bg.jpg");
+        background-image: url("bg.jpg");
         background-attachment: fixed;
         background-position: center center;
         background-size: cover;
@@ -229,7 +229,7 @@
           }
     }
     .project1, .project2, .project3, .project4{
-        background-image: url("../img/bg.jpg");
+        background-image: url("bg.jpg");
         background-attachment: fixed;
         background-position: center center;
         background-size: cover;
