--- a/_base.scss
+++ b/_base.scss
@@ -113,7 +113,7 @@
             width: 100%;
             height: 110%;
             align-self: start;
-            background-image: url(project4.PNG);
+            background-image: url("project4.PNG");
             animation: walk 20s infinite;
             box-shadow:5px 5px 10px 1px rgba(0,0,0,0.5);
     }
