--- a/style.css
+++ b/style.css
@@ -571,7 +571,7 @@ template {
   -ms-flex-item-align: start;
       -ms-grid-row-align: start;
       align-self: start;
-  background-image: url(project4.PNG);
+  background-image: url("project4.PNG");
   -webkit-animation: walk 20s infinite;
           animation: walk 20s infinite;
   -webkit-box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.5);
