--- a/_base.scss
+++ b/_base.scss
@@ -25,22 +25,22 @@ main {
             }
         }
         .header-name {
-            grid-area: 3 / 3 / 4 / 7;
+            grid-area: 2 / 3 / 3 / 7;
             margin-left: 2rem;
         }
         #header-name-name {
-            grid-area: 4 / 3 / 4 / 7;
+            grid-area: 3 / 3 / 4 / 7;
             margin-left: 2rem;
         }
         #header-about {
-            grid-area: 5 / 3 / 6 / 5;
+            grid-area: 4 / 3 / 5 / 5;
             margin-left: 2rem;
         }
         #header-abouttext {
-            grid-area: 6 / 2 / 8 / 6;
+            grid-area: 5 / 2 / 7 / 6;
         }
         .header-img {
-            grid-area: 3 / 2 / 6 / 3;
+            grid-area: 2 / 2 / 5 / 3;
             max-height: 300px;
         }
     }
@@ -160,7 +160,7 @@ main{
             color: #9f7545;
         }
         #header-abouttext{
-            margin-top: -5%;
+            font-size: 0.9rem;
         }
     }
     .skills{
