--- a/_base.scss
+++ b/_base.scss
@@ -4,61 +4,60 @@ main {
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    grid-template-rows: 100vh 50vh 50vh 50vh;
+    grid-template-rows: 150vh 50vh 50vh 50vh 50vh 50vh;
     header {
         grid-area: 1 / 1 / 2 / 3;
         display: grid;
-        grid-template-columns: repeat(6, 1fr);
+        grid-template-columns: 16px 1fr 16px;
         grid-template-rows: repeat(7, 1fr);
         grid-column-gap: 0px;
         grid-row-gap: 0px;
         align-items: center;
         nav{
-            grid-area: 1 / 2 / 2 / 6;
+            grid-area: 1 / 2 / 2 / 3;
             display: grid;
-            grid-template-columns: repeat(6, 1fr);
+            grid-template-columns: repeat(2, 1fr);
             #header-lang{
                 grid-column: 1;
             }
             .header-contact{
-                grid-column: 6;
+                grid-column: 7;
             }
         }
         .header-name {
-            grid-area: 2 / 3 / 3 / 7;
+            grid-area: 2 / 1 / 3 / 3;
             margin-left: 2rem;
         }
         #header-name-name {
-            grid-area: 3 / 3 / 4 / 7;
+            grid-area: 3 / 1 / 4 / 3;
             margin-left: 2rem;
         }
         #header-about {
-            grid-area: 4 / 3 / 5 / 5;
+            grid-area: 4 / 1 / 5 / 3;
             margin-left: 2rem;
             align-self: flex-start;
         }
         #header-abouttext {
-            grid-area: 5 / 2 / 7 / 6;
+            grid-area: 5 / 2 / 7 / 3;
         }
         .header-img {
-            grid-area: 2 / 2 / 5 / 3;
-            max-height: 300px;
+            display: none;
         }
     }
     .skills {
         grid-area: 2 / 1 / 3 / 3;
     }
     .project1 {
-        grid-area: 3/1/4/2;
+        grid-area: 3/1/4/3;
     }
     .project2 {
-        grid-area: 3/2/4/3;
+        grid-area: 4/1/5/3;
     }
     .project3 {
-        grid-area: 4/1/5/2;
+        grid-area: 5/1/6/3;
     }
     .project4 {
-        grid-area: 4/2/5/3;
+        grid-area: 6/1/7/3;
     }
     .project1, .project2, .project3, .project4{
         display: grid;
@@ -105,7 +104,7 @@ main{
             font-family: 'Euphoria Script', cursive;
             position: relative;
             font-weight: 600;
-            font-size: 6rem;
+            font-size: 5rem;
             background: linear-gradient(to right, #d3aca4 0, white 10%, #9f7545 20%);
             background-position: 0;
             -webkit-background-clip: text;
