--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ main {
       grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  -ms-grid-rows: 100vh 50vh 50vh 50vh;
-      grid-template-rows: 100vh 50vh 50vh 50vh;
+  -ms-grid-rows: 150vh 50vh 50vh 50vh 50vh 50vh;
+      grid-template-rows: 150vh 50vh 50vh 50vh 50vh 50vh;
 }
 
 main header {
@@ -22,8 +22,8 @@ main header {
   grid-area: 1 / 1 / 2 / 3;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[6];
-      grid-template-columns: repeat(6, 1fr);
+  -ms-grid-columns: 16px 1fr 16px;
+      grid-template-columns: 16px 1fr 16px;
   -ms-grid-rows: (1fr)[7];
       grid-template-rows: repeat(7, 1fr);
   grid-column-gap: 0px;
@@ -37,12 +37,12 @@ main header nav {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   -ms-grid-column: 2;
-  -ms-grid-column-span: 4;
-  grid-area: 1 / 2 / 2 / 6;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 2 / 3;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[6];
-      grid-template-columns: repeat(6, 1fr);
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
 }
 
 main header nav #header-lang {
@@ -51,34 +51,34 @@ main header nav #header-lang {
 }
 
 main header nav .header-contact {
-  -ms-grid-column: 6;
-  grid-column: 6;
+  -ms-grid-column: 7;
+  grid-column: 7;
 }
 
 main header .header-name {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 4;
-  grid-area: 2 / 3 / 3 / 7;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 2 / 1 / 3 / 3;
   margin-left: 2rem;
 }
 
 main header #header-name-name {
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 4;
-  grid-area: 3 / 3 / 4 / 7;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 3 / 1 / 4 / 3;
   margin-left: 2rem;
 }
 
 main header #header-about {
   -ms-grid-row: 4;
   -ms-grid-row-span: 1;
-  -ms-grid-column: 3;
+  -ms-grid-column: 1;
   -ms-grid-column-span: 2;
-  grid-area: 4 / 3 / 5 / 5;
+  grid-area: 4 / 1 / 5 / 3;
   margin-left: 2rem;
   -ms-flex-item-align: start;
       align-self: flex-start;
@@ -88,17 +88,12 @@ main header #header-abouttext {
   -ms-grid-row: 5;
   -ms-grid-row-span: 2;
   -ms-grid-column: 2;
-  -ms-grid-column-span: 4;
-  grid-area: 5 / 2 / 7 / 6;
+  -ms-grid-column-span: 1;
+  grid-area: 5 / 2 / 7 / 3;
 }
 
 main header .header-img {
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 3;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-area: 2 / 2 / 5 / 3;
-  max-height: 300px;
+  display: none;
 }
 
 main .skills {
@@ -113,32 +108,32 @@ main .project1 {
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-area: 3/1/4/2;
+  -ms-grid-column-span: 2;
+  grid-area: 3/1/4/3;
 }
 
 main .project2 {
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-area: 3/2/4/3;
-}
-
-main .project3 {
   -ms-grid-row: 4;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-area: 4/1/5/2;
+  -ms-grid-column-span: 2;
+  grid-area: 4/1/5/3;
+}
+
+main .project3 {
+  -ms-grid-row: 5;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 5/1/6/3;
 }
 
 main .project4 {
-  -ms-grid-row: 4;
+  -ms-grid-row: 6;
   -ms-grid-row-span: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-area: 4/2/5/3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 6/1/7/3;
 }
 
 main .project1, main .project2, main .project3, main .project4 {
@@ -209,7 +204,7 @@ main header .header-name {
   font-family: 'Euphoria Script', cursive;
   position: relative;
   font-weight: 600;
-  font-size: 6rem;
+  font-size: 5rem;
   background: -webkit-gradient(linear, left top, right top, color-stop(0, #d3aca4), color-stop(10%, white), color-stop(20%, #9f7545));
   background: linear-gradient(to right, #d3aca4 0, white 10%, #9f7545 20%);
   background-position: 0;
@@ -436,5 +431,135 @@ main .project-link {
 
 main .project-link:active {
   color: #46331d;
+}
+
+@media screen and (min-width: 710px) {
+  main {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    -ms-grid-rows: 100vh 50vh 50vh 50vh;
+        grid-template-rows: 100vh 50vh 50vh 50vh;
+  }
+  main header {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: 1 / 1 / 2 / 3;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[6];
+        grid-template-columns: repeat(6, 1fr);
+    -ms-grid-rows: (1fr)[7];
+        grid-template-rows: repeat(7, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  main header nav {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 4;
+    grid-area: 1 / 2 / 2 / 6;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[6];
+        grid-template-columns: repeat(6, 1fr);
+  }
+  main header nav #header-lang {
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  main header nav .header-contact {
+    -ms-grid-column: 6;
+    grid-column: 6;
+  }
+  main header .header-name {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 4;
+    grid-area: 2 / 3 / 3 / 7;
+    margin-left: 2rem;
+  }
+  main header #header-name-name {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 4;
+    grid-area: 3 / 3 / 4 / 7;
+    margin-left: 2rem;
+  }
+  main header #header-about {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
+    grid-area: 4 / 3 / 5 / 5;
+    margin-left: 2rem;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  main header #header-abouttext {
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 4;
+    grid-area: 5 / 2 / 7 / 6;
+  }
+  main header .header-img {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 2 / 2 / 5 / 3;
+    max-height: 300px;
+    display: block;
+  }
+  main .skills {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: 2 / 1 / 3 / 3;
+  }
+  main .project1 {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 3/1/4/2;
+  }
+  main .project2 {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 3/2/4/3;
+  }
+  main .project3 {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 4/1/5/2;
+  }
+  main .project4 {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-area: 4/2/5/3;
+  }
+  .header-name {
+    font-size: 6rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
